force-app/main/default/objects/KimbleOne__ApprovalType__c/KimbleOne__ApprovalType__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Approval Type</label>
    <nameField>
        <label>Approval Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>