force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__Approver1Type__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1 Type</label>
    <referenceTo>KimbleOne__ApproverType__c</referenceTo>
    <relationshipLabel>Approval Types (Approver1 Type)</relationshipLabel>
    <relationshipName>ApprovalTypesApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>