force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__Approver1User__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovalTypesApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>