force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__Approver2Type__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver2Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2 Type</label>
    <referenceTo>KimbleOne__ApproverType__c</referenceTo>
    <relationshipLabel>Approval Types (Approver2 Type)</relationshipLabel>
    <relationshipName>ApprovalTypesApprover2</relationshipName>
    <type>Lookup</type>
</CustomField>