force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__CanSelfApprove__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanSelfApprove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Self Approve?</label>
    <type>Checkbox</type>
</CustomField>