force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__Enum__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Enum__c</fullName>
    <label>Enum</label>
    <length>30</length>
    <type>Text</type>
</CustomField>