force-app/main/default/objects/KimbleOne__ApprovalType__c/fields/KimbleOne__IsResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsResourcedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResourcedActivity</label>
    <type>Checkbox</type>
</CustomField>